Ghani Collection Demo

--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
             <li class="nav-item active">
               <a href="index.html" class="nav-link">Home</a>
             </li>
+            <li class="nav-item">
+              <a href="shop.html" class="nav-link">All Unstitched</a>
+            </li>
+            <li class="nav-item">
+              <a href="shop.html" class="nav-link">Summer Collection</a>
+            </li>
+            <li class="nav-item">
+              <a href="shop.html" class="nav-link">Sale</a>
+            </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -67,28 +76,16 @@
                 data-toggle="dropdown"
                 aria-haspopup="true"
                 aria-expanded="false"
-                >Shop</a
+                >About</a
               >
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="shop.html">Shop</a>
-                <a class="dropdown-item" href="product-single.html"
-                  >Single Product</a
-                >
-                <a class="dropdown-item" href="cart.html">Cart</a>
-                <a class="dropdown-item" href="checkout.html">Checkout</a>
+                <a class="dropdown-item" href="#">About Us</a>
+                <a class="dropdown-item" href="#">Contact Us</a>
+                <a class="dropdown-item" href="#">News</a>
               </div>
             </li>
-            <li class="nav-item">
-              <a href="about.html" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-              <a href="blog.html" class="nav-link">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a href="contact.html" class="nav-link">Contact</a>
-            </li>
             <li class="nav-item cta cta-colored">
-              <a href="cart.html" class="nav-link"
+              <a href="#" class="nav-link"
                 ><span class="icon-shopping_cart"></span>[0]</a
               >
             </li>
@@ -96,7 +93,6 @@
         </div>
       </div>
     </nav>
-    <!-- END nav -->
 
     <div
       class="hero-wrap js-fullheight"
@@ -139,11 +135,11 @@
             <div class="product-slider owl-carousel ftco-animate">
               <div class="item">
                 <div class="product">
-                  <a href="#" class="img-prod"
+                  <a href="product-single.html" class="img-prod"
                     ><img
                       class="img-fluid"
                       src="images/product-1.jpg"
-                      alt="Colorlib Template"
+                      alt=" Template"
                     />
                     <span class="status">30%</span>
                   </a>
@@ -171,11 +167,11 @@
               </div>
               <div class="item">
                 <div class="product">
-                  <a href="#" class="img-prod"
+                  <a href="product-single.html" class="img-prod"
                     ><img
                       class="img-fluid"
                       src="images/product-2.jpg"
-                      alt="Colorlib Template"
+                      alt=" Template"
                   /></a>
                   <div class="text pt-3 px-3">
                     <h3><a href="#">Young Woman Wearing Dress</a></h3>
@@ -198,11 +194,11 @@
               </div>
               <div class="item">
                 <div class="product">
-                  <a href="#" class="img-prod"
+                  <a href="product-single.html" class="img-prod"
                     ><img
                       class="img-fluid"
                       src="images/product-3.jpg"
-                      alt="Colorlib Template"
+                      alt=" Template"
                   /></a>
                   <div class="text pt-3 px-3">
                     <h3><a href="#">Young Woman Wearing Dress</a></h3>
@@ -225,11 +221,11 @@
               </div>
               <div class="item">
                 <div class="product">
-                  <a href="#" class="img-prod"
+                  <a href="product-single.html" class="img-prod"
                     ><img
                       class="img-fluid"
                       src="images/product-4.jpg"
-                      alt="Colorlib Template"
+                      alt=" Template"
                   /></a>
                   <div class="text pt-3 px-3">
                     <h3><a href="#">Young Woman Wearing Dress</a></h3>
@@ -252,8 +248,8 @@
               </div>
               <div class="item">
                 <div class="product">
-                  <a href="#" class="img-prod"
-                    ><img src="images/product-5.jpg" alt="Colorlib Template" />
+                  <a href="product-single.html" class="img-prod"
+                    ><img src="images/product-5.jpg" alt=" Template" />
                     <span class="status">30%</span>
                   </a>
                   <div class="text pt-3 px-3">
@@ -280,8 +276,8 @@
               </div>
               <div class="item">
                 <div class="product">
-                  <a href="#" class="img-prod"
-                    ><img src="images/product-6.jpg" alt="Colorlib Template"
+                  <a href="product-single.html" class="img-prod"
+                    ><img src="images/product-6.jpg" alt=" Template"
                   /></a>
                   <div class="text pt-3 px-3">
                     <h3><a href="#">Young Woman Wearing Dress</a></h3>
@@ -369,11 +365,11 @@
         <div class="row">
           <div class="col-sm col-md-6 col-lg ftco-animate">
             <div class="product">
-              <a href="#" class="img-prod"
+              <a href="product-single.html" class="img-prod"
                 ><img
                   class="img-fluid"
                   src="images/product-1.jpg"
-                  alt="Colorlib Template"
+                  alt=" Template"
               /></a>
               <div class="text py-3 px-3">
                 <h3><a href="#">Young Woman Wearing Dress</a></h3>
@@ -405,11 +401,11 @@
           </div>
           <div class="col-sm col-md-6 col-lg ftco-animate">
             <div class="product">
-              <a href="#" class="img-prod"
+              <a href="product-single.html" class="img-prod"
                 ><img
                   class="img-fluid"
                   src="images/product-2.jpg"
-                  alt="Colorlib Template"
+                  alt=" Template"
               /></a>
               <div class="text py-3 px-3">
                 <h3><a href="#">Young Woman Wearing Dress</a></h3>
@@ -441,11 +437,11 @@
           </div>
           <div class="col-sm col-md-6 col-lg ftco-animate">
             <div class="product">
-              <a href="#" class="img-prod"
+              <a href="product-single.html" class="img-prod"
                 ><img
                   class="img-fluid"
                   src="images/product-3.jpg"
-                  alt="Colorlib Template"
+                  alt=" Template"
               /></a>
               <div class="text py-3 px-3">
                 <h3><a href="#">Young Woman Wearing Dress</a></h3>
@@ -477,11 +473,11 @@
           </div>
           <div class="col-sm col-md-6 col-lg ftco-animate">
             <div class="product">
-              <a href="#" class="img-prod"
+              <a href="product-single.html" class="img-prod"
                 ><img
                   class="img-fluid"
                   src="images/product-4.jpg"
-                  alt="Colorlib Template"
+                  alt=" Template"
               /></a>
               <div class="text py-3 px-3">
                 <h3><a href="#">Young Woman Wearing Dress</a></h3>
